# gnome-session-openrc

./: README.md  meson.build
data/: meson.build
data/openrc/: gnome-session  gnome-session-dbus  gnome-session-init  gnome-session-monitor  gnome-session-shutdown  gnome-session-wayland  gnome-session-x11  gnome-settings-daemon  gnome-settings-daemon-x11  gnome-shell  gnome-shell-wayland  gnome-shell-wayland.gnome-login  gnome-shell-x11  gnome-shell-x11.gnome-login  gnome-shell.gnome-login  gsd  gsd-media-keys  gsd-print-notifications  gsd-xsettings
gnome-session/: gsm-manager.c  leader-main.c  leader-openrc.c  meson.build  service-main.c
tools/: gnome-session-ctl.c
